@@ -1614,7 +1614,7 @@ _DATA                           C      10C        12        12
 <TR BGCOLOR="#E8E8E8"><TD>Characteristics</TD> <TD>10Fh</TD><TD>12Fh</TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD>Magic</TD>     <TD>10Bh</TD><TD>20Bh</TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD>LinkerVersion</TD><TD>5.1</TD><TD></TD></TR>
-<TR BGCOLOR="#E8E8E8"><TD>ImageBase</TD><TD>400000h</TD><TD></TD></TR>
+<TR BGCOLOR="#E8E8E8"><TD>ImageBase</TD><TD>exe: 400000h<br>dll: 10000000h</TD><TD>140000000h<br>180000000h</TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD>SectionAlignment</TD><TD>1000h</TD><TD></TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD>FileAlignment</TD><TD>200h</TD><TD></TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD>OSVersion</TD><TD>4.0</TD><TD></TD></TR>
@@ -1622,7 +1622,7 @@ _DATA                           C      10C        12        12
 <TR BGCOLOR="#E8E8E8"><TD>SubsystemVersion</TD><TD>4.0</TD><TD></TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD>Win32Version</TD><TD>0</TD><TD></TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD>Checksum</TD><TD>0</TD><TD></TD></TR>
-<TR BGCOLOR="#E8E8E8"><TD>Subsystem</TD><TD>2 (=Console)</TD><TD></TD></TR>
+<TR BGCOLOR="#E8E8E8"><TD>Subsystem</TD><TD>3 (=Console)</TD><TD></TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD>DllCharacteristics</TD><TD>0</TD><TD></TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD>SizeOfStack</TD><TD>100000h,1000h</TD><TD></TD></TR>
 <TR BGCOLOR="#E8E8E8"><TD>SizeOfHeap</TD><TD>100000h,1000h</TD><TD></TD></TR>
